--- a/css/player.css
+++ b/css/player.css
@@ -1,21 +1,163 @@
-.player {
-    background: var(--gradiente);
-    width: 100%;
-    height: 720px;
-    margin: 0;
+footer.menu {
     position: fixed;
+    bottom: 0;
+    z-index: 50;
 }
 
-.music-big-cover>img {
+#miniplayer-container {
+    display: block;
+}
+
+.miniplayer {
+    background-color: rgb(43, 41, 41);
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding-right: 10px;
+    align-items: center;
+    display: flex;
+    width: 100vw;
+}
+
+.page-popup {
+    position: fixed;
+    width: 100vw;
+    z-index: 15;
+    margin: 0;
+    left: 0;
+    padding: 0;
+    overflow: scroll;
+    background-color: white;
+    display: none;
+}
+
+.page-popup > .navbar > .icon{
+    padding: 2.5vh;
+    box-sizing: border-box;
+    font-size: 20px;
+}
+
+.seek {
+    width: 100vw;
+    display: block;
+}
+
+.music-info, .player-controls {
+    display: flex;
+    align-items: center;
+}
+
+.artistName {
+    font-size: .7em !important;
+}
+
+#player-navbar {
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    display: flex;
+    padding: 16px;
+    width: 100vw;
+    height: auto;
+    box-sizing: border-box;
+}
+
+.item {
+    display: flex;
+    color: gray;
+    flex-direction: column;
+    text-align: center;
+}
+
+.music-cover {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+.menu fa {
+    font-size: 22px;
+}
+
+.btn-play-pause, .btn-download {
+    padding: 7px;
+    padding-left: 17px;
+    margin-top: 5px;
+    font-size: 22pt;
+}
+
+.seek {
+    width: 100%;
+}
+
+.seek-bar {
+    height: 3px;
+    width: 100%;
+    background: rgb(51, 50, 50);
+}
+
+.juice {
+    width: 50%;
+    height: 3px;
+    background: linear-gradient(90deg, #FC466B 0%, #963694 100%);
+}
+
+.music-big-cover > img {
     width: 200px;
+    height: 200px;
     border-radius: 50%;
 }
 
 .music-big-cover {
-    margin-top: 50%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
     align-items: center;
     flex-direction: column;
+}
+
+.lyrics {
+    color: white;
+    width: 200%;
+    height: 80%;
+}
+
+.player-text {
+    color: white;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: column-reverse;
+}
+
+.music-cover-div {
+    padding: 7px;
+}
+
+.miniplayer-text {
+    margin-top: 5px;
+    padding: 7px;
+    width: 50%;
+    overflow: hidden;
+}
+
+.player {
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.164);
+    background: var(--gradiente);
+    align-items: center;
+    justify-content: center;
+    z-index: 4;
+    width: 100vw;
+    height: 85vh;
+    display: flex;
+}
+
+.player > .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 0;
 }
 
 .player-text {
@@ -35,78 +177,4 @@
     color: white;
     width: 200%;
     height: 80%;
-}
-
-.miniplayer {
-    padding-left: 0;
-    z-index: 99999;
-    text-align: left;
-    margin: 0;
-    display: inline;
-    list-style: none;
-    background-color: rgb(43, 41, 41);
-    position: fixed;
-    width: 100%;
-    padding-bottom: 60px;
-    bottom: 0;
-}
-
-.music-cover-div>img {
-    width: 50px;
-    height: 50px;
-    margin: 0;
-    border-radius: 50%;
-}
-
-.music-cover-div {
-    margin: 0;
-    float: left;
-    padding: 7px;
-}
-
-.btn-play-pause {
-    float: left;
-    padding: 7px;
-    margin-top: 5px;
-    font-size: 22pt;
-}
-
-.btn-download {
-    float: left;
-    padding: 7px;
-    padding-left: 17px;
-    margin-top: 5px;
-    font-size: 22pt;
-}
-
-.miniplayer-text {
-    margin-top: 5px;
-    padding: 7px;
-    float: left;
-    width: 50%;
-    overflow: hidden;
-}
-
-.seek {
-    width: 100%;
-}
-
-.seek-bar {
-    height: 3px;
-    width: 100%;
-    background: rgb(51, 50, 50);
-}
-
-.juice {
-    width: 50%;
-    height: 3px;
-    background: linear-gradient(90deg, #FC466B 0%, #963694 100%);
-}
-
-.time {
-    float: left;
-}
-
-.total-time {
-    float: right;
 }
