--- a/css/slider.css
+++ b/css/slider.css
@@ -1,37 +1,57 @@
-.mini-slider {
-    width: 100%;
-    height: 100px;
+.mini-slider, .slider {
     display: flex;
-    overflow-x: auto;
 }
-
-.mini-slide {
-    width: 90px;
-    flex-shrink: 0;
-    height: 90px;
-    padding-left: 12px;
-}
-
-.mini-slide img {
-    width: 100%;
-}
-
-
-/* ----- */
 
 .slider {
     width: 100%;
-    height: 150px;
-    display: flex;
     overflow-x: auto;
 }
 
 .slide {
     flex-shrink: 0;
-    height: 100%;
     padding-left: 12px;
 }
 
-.slide img {
-    width: 100%;
+.slide:first-of-type {
+    padding-left: 0;
+}
+
+/* ----- */
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track{
+    border-radius: 4px;
+    box-shadow: unset;
+}
+
+::-webkit-scrollbar-track-piece{
+  background: 0 0;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: rgba(79, 111, 127, .05)
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background: rgba(0, 0, 0, .4);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #b4c7d0;
+  border: 3px solid transparent;
+  background-clip: padding-box;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #4f6f7f;
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+    background-color: #c6dae3;
 }
